test/errors/png-read/png-read.rom
Error in `png-read.asm` on line 1: Could not read `png-read.txt`
